# maisabpo

01/: binaryOutput.cpp
02/: bitwiseOp.cpp
03/: modMath.cpp
04/: modMathPoly.cpp
05/: primeNum.cpp
06/: bigInteger.cpp  bigInteger.h
06/BigIntegerBenchmark/: BigIntegerBenchmark.cs  build.sh
06/bigIntegerSrc/: CMakeLists.txt  bigInteger.cpp  bigInteger.h
11/: loop.cpp
